--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,6 @@ url:
 twitter_username: jekyllrb
 github_username: jekyll
 markdown: kramdown
-theme: minima
+theme: alembic-jekyll-theme
 plugins:
 - jekyll-feed
