remote theming debug

--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,6 @@ github_username: jekyll
 markdown: kramdown
 theme: alembic-jekyll-theme
 plugins:
-- jekyll-feed
+    - jekyll-feed
+    - jekyll-remote-theme
+remote_theme: daviddarness/alembic
