more theme debugging. added remote theme plugin

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url:
 twitter_username: jekyllrb
 github_username: jekyll
 markdown: kramdown
-theme: alembic-jekyll-theme
+# theme: alembic-jekyll-theme
 plugins:
     - jekyll-feed
     - jekyll-remote-theme
